<resources>
    <string name="app_name">My App Portfolio</string>
    
    <string name="title">My Nanodegree App!</string>
    <string name="action_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="action_scores_app">SCORES APP</string>
    <string name="action_libary_app">LIBARY APP</string>
    <string name="action_build_it_bigger">BUILD IT BIGGER</string>
    <string name="action_xyz_reader">XYZ READER</string>
    <string name="action_my_own_app">MY OWN APP</string>
</resources>
