<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/title"
        android:textSize="54px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/action_spotify_streamer"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_spotify_streamer"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="actionSpotifyStreamer"/>

    <Button
        android:id="@+id/action_scores_app"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_scores_app"
        android:layout_gravity="center"
        android:onClick="actionScoresApp"/>

    <Button
        android:id="@+id/action_libary_app"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_libary_app"
        android:layout_gravity="center"
        android:onClick="actionLibaryApp"/>

    <Button
        android:id="@+id/action_build_it_bigger"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_build_it_bigger"
        android:layout_gravity="center"
        android:onClick="actionBuildItBigger"/>

    <Button
        android:id="@+id/action_xyz_reader"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_xyz_reader"
        android:layout_gravity="center"
        android:onClick="actionXyzReader"/>

    <Button
        android:id="@+id/action_my_own_app"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/action_my_own_app"
        android:layout_gravity="center"
        android:onClick="actionMyOwnApp"/>

</LinearLayout>
